--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <link href="./output.css" rel="stylesheet">
   <title>TimeCore</title>
 </head>
-<body class="bg-gray-900 text-white min-h-screen flex flex-col">
+<body class="bg-gray-900 text-white min-h-screen h-screen flex flex-col">
+<div id="toastContainer" class="fixed top-5 right-5 z-50 space-y-2"></div>
 
-  <!-- TOP NAVBAR -->
   <!-- TOP NAVBAR -->
 <header class="w-full flex items-center justify-between bg-gray-800 px-4 py-3 shadow">
   <div class="flex items-center space-x-2">
@@ -16,27 +16,32 @@
     <span class="text-xl font-bold text-primary">TimeCore</span>
   </div>
 
-  <div class="flex items-center">
-    <button id="openCompetitionModalBtn" class="bg-primary hover:bg-primary-600 text-white px-4 py-2 rounded shadow transition">
-      🏆 Zvolit soutěž
-    </button>
-  </div>
+  <div class="flex items-center gap-3">
+  <span id="selectedCompetitionLabel" class="text-sm text-gray-400 italic"></span>
+  <button id="openCompetitionModalBtn" class="bg-primary hover:bg-primary-600 text-white px-4 py-2 rounded shadow transition">
+    🏆 Zvolit soutěž
+  </button>
+</div>
+
 </header>
 
 <!-- MODAL: Výběr soutěže -->
-<div id="competitionModal" class="fixed inset-0 bg-black bg-opacity-60 hidden justify-center items-center z-50">
-  <div class="bg-gray-800 p-6 rounded-lg w-full max-w-2xl h-[80vh] flex flex-col shadow-lg">
+<div id="competitionModal" class="fixed inset-0 bg-black bg-opacity-60 hidden z-50 flex items-center justify-center px-4">
+  <div class="bg-gray-800 p-6 rounded-lg w-full max-w-2xl h-[80vh] flex flex-col shadow-xl animate-scaleIn">
+
+    <!-- Hlavička -->
     <div class="flex justify-between items-center mb-4">
       <h2 class="text-xl font-semibold text-primary">Vyber soutěž</h2>
       <button id="closeCompetitionModal" class="text-white hover:text-gray-400 text-2xl">&times;</button>
     </div>
 
     <!-- Vyhledávání + filtrování -->
-    <div class="flex items-center gap-3 mb-4">
+    <div class="flex items-center gap-3 mb-4 p-3">
       <input id="searchCompetitionInput" type="text" placeholder="Hledat soutěž..."
         class="flex-1 p-2 rounded bg-gray-700 text-white placeholder-gray-400 focus:outline-none" />
 
-      <select id="sortCompetitionSelect" class="p-2 rounded bg-gray-700 text-white focus:outline-none">
+      <select id="sortCompetitionSelect"
+        class="p-2 rounded bg-gray-700 text-white focus:outline-none">
         <option value="date_desc">Nejnovější</option>
         <option value="date_asc">Nejstarší</option>
         <option value="name_asc">A–Z</option>
@@ -45,22 +50,27 @@
     </div>
 
     <!-- Seznam soutěží -->
-    <div id="competitionList" class="flex-1 overflow-y-auto space-y-2 pr-1">
-      <!-- dynamicky se naplní -->
+    <div id="competitionList" class="flex-1 max-h-56 overflow-y-auto space-y-2 p-3">
+      <!-- Dynamický obsah -->
     </div>
 
     <!-- Akce -->
     <div class="flex justify-between items-center pt-4 border-t border-gray-700 mt-4">
-      <button id="createNewCompetitionBtn" class="text-sm text-blue-400 hover:underline">
-        + Nová soutěž
-      </button>
+      <button id="createNewCompetitionBtn"
+  class="flex items-center gap-2 text-sm font-medium bg-blue-600 hover:bg-blue-700 text-white px-3 py-1.5 rounded shadow transition-all">
+  <span class="text-lg">➕</span>
+  Nová soutěž
+</button>
 
-      <button id="cancelSelectCompetitionBtn" class="px-4 py-2 bg-gray-600 hover:bg-gray-500 rounded text-white">
+
+      <button id="cancelSelectCompetitionBtn"
+        class="px-4 py-2 bg-gray-600 hover:bg-gray-500 rounded text-white">
         Zavřít
       </button>
     </div>
   </div>
 </div>
+
 
 
   <div class="flex flex-1 min-h-0">
@@ -69,8 +79,8 @@
   </div>
 
   <!-- MODAL: VYTVOŘIT SOUTĚŽ -->
-  <div id="createCompetitionModal" class="fixed inset-0 bg-black bg-opacity-50 hidden justify-center items-center">
-    <div class="bg-gray-800 rounded-lg p-6 w-full max-w-md animate-scaleIn">
+  <div id="createCompetitionModal" class="fixed inset-0 bg-black bg-opacity-60 hidden z-50 flex items-center justify-center">
+  <div class="bg-gray-800 rounded-lg p-6 w-full max-w-md animate-scaleIn">
       <h2 class="text-xl font-bold mb-4 text-primary">Vytvořit soutěž</h2>
 
       <div class="space-y-3">
@@ -96,6 +106,38 @@
           Zrušit
         </button>
         <button id="saveCreateComp" class="px-4 py-2 bg-primary rounded hover:bg-primary-600">
+          Uložit
+        </button>
+      </div>
+    </div>
+  </div>
+  <div id="editCompetitionModal" class="fixed inset-0 bg-black bg-opacity-60 hidden z-50 flex items-center justify-center">
+  <div class="bg-gray-800 rounded-lg p-6 w-full max-w-md animate-scaleIn">
+      <h2 class="text-xl font-bold mb-4 text-primary">Vytvořit soutěž</h2>
+
+      <div class="space-y-3">
+        <input id="editCompName" type="text" placeholder="Název soutěže"
+          class="w-full p-2 rounded bg-gray-700 text-white focus:outline-none" />
+
+        <input id="editCompDate" type="date"
+          class="w-full p-2 rounded bg-gray-700 text-white focus:outline-none" />
+
+        <input id="editCompTime" type="time"
+          class="w-full p-2 rounded bg-gray-700 text-white focus:outline-none" />
+
+        <select id="editCompType"
+          class="w-full p-2 rounded bg-gray-700 text-white focus:outline-none">
+          <option value="">Zvol typ soutěže</option>
+          <option value="Požární útok">Požární útok</option>
+          <option value="Běh">Běh</option>
+        </select>
+      </div>
+
+      <div class="flex justify-end mt-6 space-x-3">
+        <button id="editCancelCreateComp" class="px-4 py-2 bg-gray-600 rounded hover:bg-gray-500">
+          Zrušit
+        </button>
+        <button id="editSaveCreateComp" class="px-4 py-2 bg-primary rounded hover:bg-primary-600">
           Uložit
         </button>
       </div>
