--- a/src/index.html
+++ b/src/index.html
@@ -143,6 +143,23 @@
       </div>
     </div>
   </div>
+<!-- MODAL -->
+<div id="customModal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
+  <div class="bg-gray-800 text-white rounded-xl shadow-xl w-full max-w-md p-6 relative">
+    <h2 class="text-xl font-semibold mb-4 flex items-center gap-2">
+      ✅ <span id="customModalTitle">Úspěch</span>
+    </h2>
+    <p id="customModalMessage" class="mb-6"></p>
+    <div class="text-right">
+      <button id="customModalCloseBtn" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
+        OK
+      </button>
+    </div>
+  </div>
+</div>
+
+
+
 <script src="./js/renderer.js"></script>
 </body>
 </html>
